--- a/food-app/package.json
+++ b/food-app/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.0.4",
+    "next": "^13.4.10",
     "react": "^18",
     "react-countdown": "^2.3.5",
     "react-dom": "^18",
