--- a/food-app/package.json
+++ b/food-app/package.json
@@ -13,7 +13,8 @@
     "react": "^18",
     "react-countdown": "^2.3.5",
     "react-dom": "^18",
-    "react-icons": "^4.12.0"
+    "react-icons": "^4.12.0",
+    "swr": "^2.2.4"
   },
   "devDependencies": {
     "@types/node": "^20",
