--- a/food-app/package.json
+++ b/food-app/package.json
@@ -9,12 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "^13.4.10",
+    "next": "14.0.4",
     "react": "^18",
     "react-countdown": "^2.3.5",
     "react-dom": "^18",
-    "react-icons": "^4.12.0",
-    "swr": "^2.2.4"
+    "react-icons": "^4.12.0"
   },
   "devDependencies": {
     "@types/node": "^20",
